@@ -1,4 +1,9 @@
-[B]v0.3.1 (6-06-2014):[/B]
+[B]v0.3.3 (12-06-2014):[/B]
+-Fix arenavision / arenavision schedule
+-Fix Rojadirecta parser
+-Added world cup 2014 category to wiziwig parser
+
+[B]v0.3.2 (6-06-2014):[/B]
 -Fix load_local_torrents for windows (tks azirus)
 
 [B]v0.3.1 (5-06-2014):[/B]
